--- a/nginx/bookking/vhost.conf
+++ b/nginx/bookking/vhost.conf
@@ -1,11 +1,14 @@
 server {
-    listen       8080;
+    listen       80;
     server_name  localhost;
 
     access_log  /var/log/nginx/access.log  main;
 
-    location / {
+    location ~* /api/v1/.+ {
 	add_header Access-Control-Allow-Origin *;
 	proxy_pass http://booking-api:8080;
     }
+    location / {
+	return 404;
+	}
 }
