handle options requests

--- a/nginx/bookking/vhost.conf
+++ b/nginx/bookking/vhost.conf
@@ -5,6 +5,12 @@ server {
     access_log  /var/log/nginx/access.log  main;
 
     location ~* /api/v1/.+ {
+    	if ($request_method = OPTIONS ) {
+        	add_header Content-Length 0;
+        	add_header Content-Type text/plain;
+		add_header Access-Control-Allow-Origin *;
+        	return 200;
+    	}
 	add_header Access-Control-Allow-Origin *;
 	proxy_pass http://booking-api:8080;
     }
