--- a/nginx/bookking/vhost.conf
+++ b/nginx/bookking/vhost.conf
@@ -9,11 +9,11 @@ server {
         	add_header Content-Length 0;
         	add_header Content-Type text/plain;
 		add_header Access-Control-Allow-Origin *;
-		add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
+		add_header Access-Control-Allow-Methods "POST, GET, PUT, OPTIONS";
         	return 200;
     	}
 	add_header Access-Control-Allow-Origin *;
-	add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
+	add_header Access-Control-Allow-Methods "POST, GET, PUT, OPTIONS";
 	proxy_pass http://booking-api:8080;
     }
     location / {
