--- a/nginx/bookking/vhost.conf
+++ b/nginx/bookking/vhost.conf
@@ -17,6 +17,7 @@ server {
 	proxy_pass http://booking-api:8080;
     }
     location / {
-	return 404;
+	root /var/www/bookking;
+	index index.html;
 	}
 }
